--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.5.0/modern-normalize.css"
+        integrity="sha512-GKlfB51eOZoTcBnBfXOP6ZKPaFFJ9OhgwdGtxt9Y7H2TfSNT8XkdIWflKj1HrAGDdr9jG9BfyTPPnurEDfzyzA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>WebStudio</title>
 </head>
 <body>
