--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.5.0/modern-normalize.css"
-        integrity="sha512-GKlfB51eOZoTcBnBfXOP6ZKPaFFJ9OhgwdGtxt9Y7H2TfSNT8XkdIWflKj1HrAGDdr9jG9BfyTPPnurEDfzyzA=="
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
+        integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>WebStudio</title>
 </head>
@@ -38,7 +38,7 @@
 
         <section class="intro">
             <h1 class="intro-title">Effective Solutions for Your Business</h1>
-            <button class="intro-button" type="button">Order Service</button>
+            <button  class="intro-button">Order Service</button>
         </section>
 
         <!-- SECTION 2 -->
