--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 <body>
     <header>
         <nav>
-            <a class="header-logo" href="./index.html"><span class="header-logo-web">Web</span>Studio</a>
+            <a class="header-logo" href="./index.html">Web<span class="header-logo-studio">Studio</span></a>
             <ul class="header-menu-list">
-                <li class="header-menu-item"><a href="./index.html">Studio</a></li>
-                <li class="header-menu-item"><a href="./index.html">Portfolio</a></li>
-                <li class="header-menu-item"><a href="./index.html">Contacts</a></li>
+                <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Studio</a></li>
+                <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Portfolio</a></li>
+                <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Contacts</a></li>
             </ul>
         </nav>
         <address>
             <ul class="header-address-list">
-                <li class="header-address-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="header-address-item"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li class="header-address-item"><a class="header-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="header-address-item"><a class="header-address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
@@ -152,7 +152,7 @@
     <!-- FOOTER -->
 
     <footer class="footer">
-        <a class="footer-logo" href="./index.html"><span class="footer-logo-web">Web</span>Studio</a>
+        <a class="header-logo" href="./index.html">Web<Studio class="footer-logo-studio">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
             growth solutions.
         </p>
