--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Contacts</a></li>
             </ul>
         </nav>
-        <address>
+        <address class="header-address">
             <ul class="header-address-list">
                 <li class="header-address-item"><a class="header-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="header-address-item"><a class="header-address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
@@ -152,7 +152,7 @@
     <!-- FOOTER -->
 
     <footer class="footer">
-        <a class="header-logo" href="./index.html">Web<Studio class="footer-logo-studio">Studio</span></a>
+        <a class="header-logo" href="./index.html">Web<span class="footer-logo-studio">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing &
             growth solutions.
         </p>
