--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!-- SECTION 2 -->
 
         <section class="feature">
-            <h2 class="visually-hidden">list</h2>
+            <h2 hidden>list</h2>
             <ul class="feature-list">
                 <li class="feature-item">
                     <h3 class="feature-item-subtitle">Strategy</h3>
