--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
-        integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>WebStudio</title>
 </head>
 
@@ -21,8 +19,8 @@
             <a class="header-logo" href="./index.html">Web<span class="header-logo-studio">Studio</span></a>
             <ul class="header-menu-list">
                 <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Studio</a></li>
-                <li class="header-menu-item"><a href="./index.html" class="header-menu-link">Portfolio</a></li>
-                <li class="header-menu-item"><a href="./index.html" class="header-menu-link" >Contacts</a></li>
+                <li class="header-menu-item"><a href="" class="header-menu-link">Portfolio</a></li>
+                <li class="header-menu-item"><a href="" class="header-menu-link" >Contacts</a></li>
             </ul>
         </nav>
         <address class="header-address">
