--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <a class="header-logo" href="./index.html">Web<span class="header-logo-studio">Studio</span></a>
             <ul class="header-menu-list">
                 <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Studio</a></li>
-                <li class="header-menu-item"><a href="" class="header-menu-link">Portfolio</a></li>
-                <li class="header-menu-item"><a href="" class="header-menu-link" >Contacts</a></li>
+                <li class="header-menu-item"><a class="header-menu-link" href="">Portfolio</a></li>
+                <li class="header-menu-item"><a class="header-menu-link" href="">Contacts</a></li>
             </ul>
         </nav>
         <address class="header-address">
